🔧 JDK 버전 변경에 따른 소스 코드 변경